k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-service
spec:
  selector:
    app: socket-service
  ports:
    - protocol: TCP
      port: 3000
  type: LoadBalancer
