k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "socket-service"
  name: socket-service
spec:
  rules:
    - http:
        paths:
          - path: /socket/
            pathType: Prefix
            backend:
              service:
                name: socket-service
                port:
                  number: 3000
